@@ -249,7 +249,8 @@
         <string id="33331">IPHONE-Verzeichniss nicht gefunden oder beschreibbar !</string> 
         <string id="33332">PSP-Verzeichniss nicht gefunden oder beschreibbar !</string> 
         <string id="33333">Standard mkv benötigt Bluray-Funktionen</string> 
-        <string id="33334">Kopierschutz entdeckt. Trotzdem fortfahren ?</string>     
+        <string id="33334">Kopierschutz entdeckt. Trotzdem fortfahren ?</string>
+        <string id="33335">Standard Sprache (Audio/Untertitel) nicht gefunden !</string>       
  
          # Warning : do not modify this id !!!! 
 
